# persistent

./: cabal.project
experimental/couchDB/: persistent-couchdb.cabal
experimental/couchDB/Database/Persist/: B64.hs  CouchDB.hs
persistent/: persistent.cabal
persistent-qq/: persistent-qq.cabal
persistent-template/: persistent-template.cabal
persistent-template/Database/Persist/: TH.hs
persistent/Database/: Persist.hs
persistent/Database/Persist/: Quasi.hs
persistent/Database/Persist/Class/: PersistEntity.hs
persistent/Database/Persist/Types/: Base.hs
