name:            persistent-couchdb
version:         0.1.0
license:         BSD3
license-file:    LICENSE
author:          Pavel Dvořák <id@dqd.cz>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Backend for the persistent library using CouchDB.
description:     Based on the CouchDB package.
category:        Database, Yesod
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues

library
    build-depends:   base                  >= 4.6        && < 5
                   , enumerator
                   , mtl
                   , comonad
                   , exceptions
                   , unliftio-core
                   , resource-pool
                   , json
                   , aeson
                   , attoparsec
                   , transformers-base
                   , MonadCatchIO-transformers
                   , transformers
                   , CouchDB
                   -- -- , couchdb-conduit       >= 0.10     && < 0.11
                   , persistent
                   , containers
                   , bytestring
                   , text
                   , monad-control
                   , time
                   -- -- , data-object           >= 0.3      && < 0.4
                   -- -- , neither               >= 0.3      && < 0.4
                   , SHA
                   , vector
                   , tostring
                   , unordered-containers
                   , path-pieces
                   , http-api-data
                   , http-types
                   , errors
    exposed-modules: Database.Persist.CouchDB
    ghc-options:     -Wall
